fix(social-media-graphics): square image asterisk footnote alignment

--- a/src/components/social-media-graphics/race/social-card.module.scss
+++ b/src/components/social-media-graphics/race/social-card.module.scss
@@ -157,10 +157,17 @@ body {
 }
 
 .square {
-  .footer {
+  .footer,
+  .asterisk-footnote {
     left: 38px;
     width: 625px;
+  }
 
+  .asterisk-footnote {
+    bottom: 15px;
+  }
+
+  .footer {
     .notes {
       width: 500px;
     }
